fix: fix links portfolio + add button mobile portfolio

--- a/src/blocks/footer/__signature/footer__signature.scss
+++ b/src/blocks/footer/__signature/footer__signature.scss
@@ -17,4 +17,8 @@
       width: calc(100% - 80px);
     }
   }
+  a{
+    text-decoration: none;
+    color: $text-for-headers;
+  }
 }
