--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -46,7 +46,7 @@
     display: flex;
     position: relative;
 
-    @media screen and (max-width:500px){
+    @media screen and (max-width:768px){
       display: flex;
       flex-direction: column;
     }
@@ -104,6 +104,22 @@
     &:hover{
       opacity: 0.9;
     }
+
+    @media screen and (max-width: 768px) {
+      position: relative;
+      opacity: 0.9;
+      width: 100%;
+      padding: 15px 0;
+      padding: 0;
+
+      a{
+        text-align: center;
+        width: 100%;
+        border: none;
+        padding: 0 10px;
+      }
+
+    }
   }
 
   &__button{
@@ -117,5 +133,6 @@
     max-width: 180px;
     max-height: 180px;
   }
+
 
 }
